--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand" href="{% url 'home' %}">
           <img src="{% static 'logo.png' %}" height="30" width="30" class="d-inline-block alighn-top"/>
       Product Hunt
       </a>
@@ -48,8 +48,17 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 	<div class="navbar-nav ml-auto">
-	  <a class="nav-item nav-link" href="">Sign up</a>
-	  <a class="nav-item nav-link" href="#">Login</a>
+        {% if user.is_authenticated %}
+
+        <a class="nav-item nav-link" href=" Javascript:{document.getElementById('logout').submit()}">Logout</a>
+	    <form id="logout" method="POST" action="{% url 'logout' %}" >
+        {% csrf_token %}
+        <input type="hidden"/>
+        </form>
+            {% else %}
+             <a class="nav-item nav-link" href="{% url 'signup' %}">Sign up</a>
+	  <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+        {% endif %}
 
 
 	</div>
