--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -14,11 +14,11 @@
    <img src="{{ product.image.url }}" class="img-fluid"/>
 </div>
 <div class="col-4">
-    <a href=""><button class="btn btn-primary btn-lg btn-block">Upvote {{ product.votes_total }}</button></a>
+    <a href="javascript:{document.getElementById('upvote').submit()}"><button class="btn btn-primary btn-lg btn-block">Upvote {{ product.votes_total }}</button></a>
 </div>
 </div>
     <br/>
-    <div class="row">
+    <div class="row pt-2">
     <div class="col-4">
    <h4>Hanted by {{ product.hunter.username }}</h4>
 </div>
@@ -33,4 +33,8 @@
 </div>
 
     </div>
+    <form id="upvote" method="POST" action="{% url 'upvote' product.id %}">
+    {% csrf_token %}
+    <input type="hidden">
+    </form>
 {% endblock %}
